# ainez

./: CMakeLists.txt
include/Core/: NesCpu.hpp
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/core/: CMakeLists.txt
src/core/Core/: NesCpu.cpp  OpCodes.cpp
test/: CMakeLists.txt
test/src/: test_cpu.cpp
